crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__jade_mage_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 52,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{2}{G}: Create a 1/1 green Saproling creature token."
      },
      "node": {
        "Spell": {
          "source_text": "Create a 1/1 green Saproling creature token",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 43,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Create a 1/1 green Saproling creature token"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Token",
                    "name": "Saproling",
                    "power": {
                      "type": "Fixed",
                      "value": 1
                    },
                    "toughness": {
                      "type": "Fixed",
                      "value": 1
                    },
                    "types": [
                      "Creature",
                      "Saproling"
                    ],
                    "colors": [
                      "Green"
                    ],
                    "keywords": [],
                    "tapped": false,
                    "count": {
                      "type": "Fixed",
                      "value": 1
                    },
                    "owner": {
                      "type": "Controller"
                    },
                    "enters_attacking": false
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Activated",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null,
            "cost": {
              "type": "Mana",
              "cost": {
                "type": "Cost",
                "shards": [
                  "Green"
                ],
                "generic": 2
              }
            },
            "description": "{2}{G}: Create a 1/1 green Saproling creature token.",
            "stages": [
              "NormalizeActivatedManaInstead",
              "ExtractCostReduction",
              "ExtractManaSpendTrigger"
            ]
          },
          "die_results": []
        }
      }
    }
  ],
  "source_text": "{2}{G}: Create a 1/1 green Saproling creature token.",
  "card_name": "Jade Mage"
}
