crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__kabira_vindicator_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
assertion_line: 387
expression: "&ir"
---
{
  "items": [
    {
      "id": 4,
      "source": {
        "id": {
          "item": 4,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 82,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Level up {2}{W} ({2}{W}: Put a level counter on this. Level up only as a sorcery.)"
      },
      "node": {
        "Keyword": {
          "LevelUp": {
            "type": "Cost",
            "shards": [
              "White"
            ],
            "generic": 2
          }
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 83,
          "end_byte": 92,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "LEVEL 2-4"
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [
              {
                "type": "SetPower",
                "value": 3
              },
              {
                "type": "SetToughness",
                "value": 6
              }
            ],
            "condition": {
              "type": "HasCounters",
              "counters": {
                "type": "OfType",
                "data": "level"
              },
              "minimum": 2,
              "maximum": 4
            },
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "LEVEL 2-4 / 3/6"
          },
          "source_text": "LEVEL 2-4 / 3/6",
          "body_ir": null
        }
      }
    },
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 3,
          "last_line": 3,
          "start_byte": 97,
          "end_byte": 135,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Other creatures you control get +1/+1."
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": "You",
              "properties": [
                {
                  "type": "Another"
                }
              ]
            },
            "modifications": [
              {
                "type": "AddPower",
                "value": 1
              },
              {
                "type": "AddToughness",
                "value": 1
              }
            ],
            "condition": {
              "type": "HasCounters",
              "counters": {
                "type": "OfType",
                "data": "level"
              },
              "minimum": 2,
              "maximum": 4
            },
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "Other creatures you control get +1/+1."
          },
          "source_text": "Other creatures you control get +1/+1.",
          "body_ir": null
        }
      }
    },
    {
      "id": 3,
      "source": {
        "id": {
          "item": 3,
          "ordinal": 0
        },
        "span": {
          "first_line": 4,
          "last_line": 4,
          "start_byte": 136,
          "end_byte": 144,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "LEVEL 5+"
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [
              {
                "type": "SetPower",
                "value": 4
              },
              {
                "type": "SetToughness",
                "value": 8
              }
            ],
            "condition": {
              "type": "HasCounters",
              "counters": {
                "type": "OfType",
                "data": "level"
              },
              "minimum": 5
            },
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "LEVEL 5+ / 4/8"
          },
          "source_text": "LEVEL 5+ / 4/8",
          "body_ir": null
        }
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 6,
          "last_line": 6,
          "start_byte": 149,
          "end_byte": 187,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Other creatures you control get +2/+2."
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": "You",
              "properties": [
                {
                  "type": "Another"
                }
              ]
            },
            "modifications": [
              {
                "type": "AddPower",
                "value": 2
              },
              {
                "type": "AddToughness",
                "value": 2
              }
            ],
            "condition": {
              "type": "HasCounters",
              "counters": {
                "type": "OfType",
                "data": "level"
              },
              "minimum": 5
            },
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "Other creatures you control get +2/+2."
          },
          "source_text": "Other creatures you control get +2/+2.",
          "body_ir": null
        }
      }
    }
  ],
  "source_text": "Level up {2}{W} ({2}{W}: Put a level counter on this. Level up only as a sorcery.)\nLEVEL 2-4\n3/6\nOther creatures you control get +1/+1.\nLEVEL 5+\n4/8\nOther creatures you control get +2/+2.",
  "card_name": "Kabira Vindicator"
}
